Rm devise invitable dependency (#312)
* rm devise invitable dependency

* custom invitation acceptance flow

* move auth invitations to other controller

* cleanup

* Update invitation_acceptances_controller.rb

* lint

* security

* Security: Implement session-based token storage for invitation acceptance

- Store invitation token in session after initial GET request
- Remove token from POST URL to reduce exposure in logs/history
- Clear session token after acceptance or errors
- Add rate limiting (20 requests per 3 minutes)
- Add database locking to prevent race conditions
- Normalize token validation to mitigate timing attacks
- Add comprehensive test coverage for security scenarios

* Refactor: Make invitation acceptances controller RESTful

- Rename show action to new (displays form)
- Rename update action to create (processes form)
- Change HTTP method from PATCH to POST
- Rename view file from show.html.erb to new.html.erb
- Update i18n keys from show/update to new/create
- Update tests to use RESTful actions and session-based token flow
- Maintain all security features and functionality

* Delete show.html.erb

* lint

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -199,6 +199,14 @@ en:
       success: Invitation declined
   membership_mailer:
     invitation_email:
+      body: |
+        You've been invited to join %{organization_name}!
+
+        To get started, click the link below to set your password and accept the invitation.
+
+        Accept invitation: %{url}
+
+        If you have any questions, please contact the person who invited you.
       subject: Join %{organization_name}
     request_accepted_email:
       subject: Welcome to %{organization_name}
@@ -389,6 +397,13 @@ en:
         no_accounts_connected: You haven't connected any OAuth accounts yet.
         title: Connected accounts
         your_connected_accounts: Connected accounts
+    invitation_acceptances:
+      create:
+        success: Password set successfully! You've been signed in.
+      new:
+        invalid_token: Invalid or expired invitation link.
+        submit: Set password and accept invitation
+        title: Set your password
     invitations:
       index:
         title: "⬇️ Invitations"
