--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -397,16 +397,13 @@ en:
         no_accounts_connected: You haven't connected any OAuth accounts yet.
         title: Connected accounts
         your_connected_accounts: Connected accounts
-    invitation_acceptances:
+    invitations:
       create:
         success: Password set successfully! You've been signed in.
       new:
         invalid_token: Invalid or expired invitation link.
         submit: Set password and accept invitation
         title: Set your password
-    invitations:
-      index:
-        title: "⬇️ Invitations"
     membership_requests:
       destroy:
         success: Membership request revoked
@@ -416,9 +413,14 @@ en:
       index:
         title: Notifications
     organizations:
+      invitations:
+        index:
+          title: "⬇️ Invitations"
       membership_requests:
         destroy:
           success: Membership request revoked
+        index:
+          title: "⬆️ Waitlisted"
     referrals:
       index:
         clicks: Referral Link Performance
