--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,13 +12,13 @@ en:
         privacy_settings:
           private:
             description_text: Only invited users can join
-            display_text: '🔒 Private'
+            display_text: "🔒 Private"
           public:
             description_text: Anyone can join
-            display_text: '🌍 Public'
+            display_text: "🌍 Public"
           restricted:
             description_text: People must submit an application to be approved to join
-            display_text: '📩 Restricted'
+            display_text: "📩 Restricted"
       project:
         attachments: Attachments
         budget: Budget
@@ -64,7 +64,7 @@ en:
       unlock_instructions:
         subject: Unlock instructions
     masquerade:
-      back: '⚠ Stop impersonating'
+      back: "⚠ Stop impersonating"
     omniauth_callbacks:
       failure: Something went wrong. Please try again
       success: Successfully authenticated from %{kind} account.
@@ -104,7 +104,7 @@ en:
           password_confirmation_label: Confirm new password
           password_confirmation_placeholder: Confirm new password
           password_label: New password
-          password_minimum: '(%{count} characters minimum)'
+          password_minimum: "(%{count} characters minimum)"
           password_placeholder: Enter new password
           submit: Change my password
           title: Change your password
@@ -130,7 +130,7 @@ en:
           password_confirmation_placeholder: Confirm new password
           password_help: Leave blank if you don't want to change it
           password_label: Password
-          password_minimum: '%{count} characters minimum'
+          password_minimum: "%{count} characters minimum"
           password_placeholder: New password
           pending_confirmation: 'Currently waiting confirmation for: %{email}'
           submit: Update
@@ -141,7 +141,7 @@ en:
           password_confirmation_label: Password confirmation
           password_confirmation_placeholder: Confirm your password
           password_label: Password
-          password_minimum: '(%{count} characters minimum)'
+          password_minimum: "(%{count} characters minimum)"
           password_placeholder: Create a password
           submit: Sign up
           title: Sign up
@@ -181,7 +181,7 @@ en:
       not_locked: was not locked
       not_saved:
         one: '1 error prohibited this %{resource} from being saved:'
-        other: '%{count} errors prohibited this %{resource} from being saved:'
+        other: "%{count} errors prohibited this %{resource} from being saved:"
     models:
       membership:
         attributes:
@@ -193,20 +193,14 @@ en:
       success: Invitation accepted
     decline:
       success: Invitation declined
-    errors:
-      not_found: Invitation not found
   join_requests:
     approve:
       success: Join request approved
     buttons:
       approve: Approve
       reject: Reject
-    errors:
-      already_participant: You're already a member of this organization
-      already_requested: You have already requested access to this organization
-      not_found: Join request not found
     index:
-      title: '⬇️ Waitlist'
+      title: "⬇️ Waitlist"
     reject:
       success: Join request rejected
     success:
@@ -223,7 +217,7 @@ en:
 
         If you have any questions, please contact the person who invited you.
       someone: Someone
-      subject: '%{invitor_email} invited you to join %{organization_name}'
+      subject: "%{invitor_email} invited you to join %{organization_name}"
     request_accepted_email:
       subject: Welcome to %{organization_name}
     request_rejected_email:
@@ -243,8 +237,6 @@ en:
         notification:
           message: Your request to join %{organization_name} has been declined.
   organizations:
-    create:
-      success: Organization created
     dashboard:
       index:
         title: Dashboard
@@ -255,8 +247,6 @@ en:
       success: Organization destroyed
     edit:
       title: Organization settings
-    errors:
-      not_found: Organization not found
     index:
       title: My organizations
     memberships:
@@ -280,20 +270,16 @@ en:
         success: Project created
       destroy:
         success: Project destroyed
-      index:
-        title: Projects
       update:
         success: Project updated
     sent_invitations:
       create:
-        success: '%{email} invited'
+        success: "%{email} invited"
       destroy:
         success: Invitation cancelled
-      errors:
-        not_found: Invitation not found
       index:
         cancel_invitation: Cancel invitation
-        title: '⬆️ Invites'
+        title: "⬆️ Invites"
     show:
       title: Home
     subscriptions:
@@ -312,7 +298,7 @@ en:
         title: Manage subscription
         you_will_lose_access_in: You will lose access in %{distance_of_time_in_words}
       pricing:
-        cancel_security: '🛡️ Cancel anytime. Secured by Stripe.'
+        cancel_security: "🛡️ Cancel anytime. Secured by Stripe."
         current_plan: Current plan
         purchase: Buy
         save_yearly: Best value
@@ -323,12 +309,10 @@ en:
         title: Transfer ownership
       update:
         success: Ownership transferred
-    update:
-      success: Organization updated
   public:
     organizations:
       index:
-        title: '🌎 Discover'
+        title: "🌎 Discover"
       show:
         actions:
           accept_invitation: Accept invitation
@@ -347,8 +331,8 @@ en:
   shared:
     actions:
       confirm: Are you sure?
-      copied: '✅ Copied!'
-      copy: '📋 Copy'
+      copied: "✅ Copied!"
+      copy: "📋 Copy"
       create: Create
       destroy: Destroy
       edit: Edit
@@ -367,7 +351,6 @@ en:
       logout: Sign out
       organizations: Organizations
       register: Sign up
-      select_organization: Organizations
     sidebar:
       search: Search... ⌘K
   static:
@@ -385,7 +368,6 @@ en:
     connected_accounts:
       connected_account:
         confirm_disconnect_message: Are you sure you want to disconnect this account?
-        connected_time_ago: Connected %{time} ago
         disconnect_button: Disconnect
       destroy:
         success: Account disconnected successfully.
@@ -411,12 +393,12 @@ en:
     organizations:
       received_invitations:
         index:
-          title: '⬇️ Invitations'
+          title: "⬇️ Invitations"
       sent_join_requests:
         destroy:
           success: Join request revoked
         index:
-          title: '⬆️ Waitlisted'
+          title: "⬆️ Waitlisted"
     referrals:
       index:
         clicks: Referral Link Performance
