Add profile and notifications links to navigation
Added a profile link with user avatar to the footer navigation and a notifications link to the user links menu. Updated the user show page to display user links, and added a 'Profile' translation key.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -350,6 +350,7 @@ en:
       login: Existing members
       logout: Sign out
       organizations: Organizations
+      profile: Profile
       register: Sign up
     sidebar:
       search: Search... ⌘K
