Add Invitations#show page for direct invitation links
Notifications and emails now link to a dedicated show page for each
invitation instead of the invitations index, so users can immediately
accept or decline without scanning a list.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -395,6 +395,8 @@ en:
       received_invitations:
         index:
           title: "⬇️ Invitations"
+        show:
+          title: Invitation
       sent_join_requests:
         destroy:
           success: Join request revoked
